[package]
name = "fourthpathfinding"
version = "0.1.0"
authors = ["alex <alex.gusain@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ncollide2d = "*"
nalgebra = "*"
ordered-float = "*"


#only for testing
image = "0.23.2"